--- a/angular/src/app/admin/form/form.component.html
+++ b/angular/src/app/admin/form/form.component.html
@@ -1,92 +1,93 @@
-<div class="modal-header">
-	<button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss()">
+<h4 class="modal-title" md-dialog-title>
+	{{type}}
+	<button type="button" class="close" aria-label="Close" md-dialog-close>
 		<span aria-hidden="true">&times;</span>
 	</button>
-	<h4 class="modal-title">{{type}}</h4>
-</div>
-<div class="modal-body">
-	<form class="form-horizontal">
-		<fieldset>
+</h4>
 
-			<div [hidden]="type == 'Add'" class="form-group row">
-				<label class="col-md-4 control-label" for="name">Id</label>
-				<div class="col-md-7">{{devotee.id}}
-				</div>
-			</div>
+<form class="form-horizontal">
+	<fieldset>
 
-			<div class="form-group row">
-				<label class="col-md-4 control-label" for="name">Name</label>
-				<div class="col-md-7">
-					<input [(ngModel)]="devotee.name" id="name" name="name" type="text" placeholder="" class="form-control input-md" required="">
-				</div>
+		<div [hidden]="type == 'Add'" class="form-group row">
+			<label class="col-md-4 control-label" for="name">Id</label>
+			<div class="col-md-7">{{devotee.id}}
 			</div>
+		</div>
 
-			<div class="form-group row">
-				<label class="col-md-4 control-label" for="mobileNumber">Mobile Number</label>
-				<div class="col-md-7">
-					<input [(ngModel)]="devotee.mobileNumber" id="mobileNumber" name="mobileNumber" type="text" placeholder="" class="form-control input-md">
-				</div>
+		<div class="form-group row">
+			<label class="col-md-4 control-label" for="name">Name</label>
+			<div class="col-md-7">
+				<input tabindex="1" [(ngModel)]="devotee.name" id="name" name="name" type="text" placeholder="" class="form-control input-md" required="">
 			</div>
+		</div>
 
-			<div class="form-group row">
-				<label class="col-md-4 control-label" for="email">Email</label>
-				<div class="col-md-7">
-					<input [(ngModel)]="devotee.email" id="email" name="email" type="text" placeholder="" class="form-control input-md">
-				</div>
+		<div class="form-group row">
+			<label class="col-md-4 control-label" for="mobileNumber">Mobile Number</label>
+			<div class="col-md-7">
+				<input [(ngModel)]="devotee.mobileNumber" id="mobileNumber" name="mobileNumber" type="text" placeholder="" class="form-control input-md">
 			</div>
+		</div>
 
-			<div class="form-group row">
-				<label class="col-md-4 control-label" for="dob">Date of Birth</label>
-				<div class="col-md-7 input-group">
-					<input [(ngModel)]="devotee.dob" id="dob" name="dob" type="text" placeholder="yyyy-mm-dd" class="form-control input-md">
-				</div>
+		<div class="form-group row">
+			<label class="col-md-4 control-label" for="email">Email</label>
+			<div class="col-md-7">
+				<input [(ngModel)]="devotee.email" id="email" name="email" type="text" placeholder="" class="form-control input-md">
 			</div>
+		</div>
 
-			<div class="form-group row">
-				<label class="col-md-4 control-label" for="fatherName">Father's Name</label>
-				<div class="col-md-7">
-					<input [(ngModel)]="devotee.fatherName" id="fatherName" name="fatherName" type="text" placeholder="" class="form-control input-md">
-				</div>
+		<div class="form-group row">
+			<label class="col-md-4 control-label" for="dob">Date of Birth</label>
+			<div class="col-md-7 input-group">
+				<input [(ngModel)]="devotee.dob" id="dob" name="dob" type="text" placeholder="yyyy-mm-dd" class="form-control input-md">
 			</div>
+		</div>
 
-			<div class="form-group row">
-				<label class="col-md-4 control-label" for="emergencyNumber">Emergency Number</label>
-				<div class="col-md-7">
-					<input [(ngModel)]="devotee.emergencyNumber" id="emergencyNumber" name="emergencyNumber" type="text" placeholder="" class="form-control input-md">
-				</div>
+		<div class="form-group row">
+			<label class="col-md-4 control-label" for="fatherName">Father's Name</label>
+			<div class="col-md-7">
+				<input [(ngModel)]="devotee.fatherName" id="fatherName" name="fatherName" type="text" placeholder="" class="form-control input-md">
 			</div>
+		</div>
 
-			<div class="form-group row">
-				<label class="col-md-4 control-label" for="baceJoinDate">Bace Join Date</label>
-				<div class="col-md-7 input-group">
-					<input [(ngModel)]="devotee.baceJoinDate" id="baceJoinDate" name="baceJoinDate" type="text" placeholder="yyyy-mm-dd" class="form-control input-md">
-				</div>
+		<div class="form-group row">
+			<label class="col-md-4 control-label" for="emergencyNumber">Emergency Number</label>
+			<div class="col-md-7">
+				<input [(ngModel)]="devotee.emergencyNumber" id="emergencyNumber" name="emergencyNumber" type="text" placeholder="" class="form-control input-md">
 			</div>
+		</div>
 
-			<div class="form-group row">
-				<label class="col-md-4 control-label" for="baceLeftDate">Bace Left Date</label>
-				<div class="col-md-7 input-group">
-					<input [(ngModel)]="devotee.baceLeftDate" id="baceLeftDate" name="baceLeftDate" type="text" placeholder="yyyy-mm-dd" class="form-control input-md">
-				</div>
+		<div class="form-group row">
+			<label class="col-md-4 control-label" for="baceJoinDate">Bace Join Date</label>
+			<div class="col-md-7 input-group">
+				<input [(ngModel)]="devotee.baceJoinDate" id="baceJoinDate" name="baceJoinDate" type="text" placeholder="yyyy-mm-dd" class="form-control input-md">
 			</div>
+		</div>
 
-			<div class="form-group row">
-				<label class="col-md-4 control-label" for="currentAddress">Current Address</label>
-				<div class="col-md-7">
-					<textarea [(ngModel)]="devotee.currentAddress" class="form-control" id="currentAddress" name="currentAddress"></textarea>
-				</div>
+		<div class="form-group row">
+			<label class="col-md-4 control-label" for="baceLeftDate">Bace Left Date</label>
+			<div class="col-md-7 input-group">
+				<input [(ngModel)]="devotee.baceLeftDate" id="baceLeftDate" name="baceLeftDate" type="text" placeholder="yyyy-mm-dd" class="form-control input-md">
 			</div>
+		</div>
 
-			<div class="form-group row">
-				<label class="col-md-4 control-label" for="permanentAddress">Permanent Address</label>
-				<div class="col-md-7">
-					<textarea [(ngModel)]="devotee.permanentAddress" class="form-control" id="permanentAddress" name="permanentAddress"></textarea>
-				</div>
+		<div class="form-group row">
+			<label class="col-md-4 control-label" for="currentAddress">Current Address</label>
+			<div class="col-md-7">
+				<textarea [(ngModel)]="devotee.currentAddress" class="form-control" id="currentAddress" name="currentAddress"></textarea>
 			</div>
-		</fieldset>
-	</form>
-</div>
-<div class="modal-footer">
-	<button type="button" class="btn btn-success" (click)="activeModal.close('save')">Save</button>
-	<button type="button" class="btn btn-secondary" (click)="activeModal.dismiss()">Close</button>
-</div>
+		</div>
+
+		<div class="form-group row">
+			<label class="col-md-4 control-label" for="permanentAddress">Permanent Address</label>
+			<div class="col-md-7">
+				<textarea [(ngModel)]="devotee.permanentAddress" class="form-control" id="permanentAddress" name="permanentAddress"></textarea>
+			</div>
+		</div>
+	</fieldset>
+</form>
+
+<md-dialog-actions align="end">
+	<span class="spacer"></span>
+	<button md-button color="primary" (click)="dialog.close('save')">SAVE</button>
+	<button md-button color="warn" md-dialog-close>CANCEL</button>
+</md-dialog-actions>
