--- a/angular/src/app/admin/upload-form/upload-form.component.html
+++ b/angular/src/app/admin/upload-form/upload-form.component.html
@@ -1,16 +1,15 @@
-<div class="modal-header">
-	<button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss()">
+<h4 class="modal-title" md-dialog-title>
+	Upload Excel Sheet
+	<button type="button" class="close" aria-label="Close" md-dialog-close>
 		<span aria-hidden="true">&times;</span>
 	</button>
-	<h4 class="modal-title">Upload Excel Sheet</h4>
-</div>
+</h4>
 <div class="modal-body">
-
 	<form [hidden]="showProgress" class="form-horizontal">
 		<fieldset>
 			<div class="form-group row">
 				<div class="col-md-7" style="margin:0 auto;text-align:center">
-					<input name="file" (change)="onChange($event)" type="file" class="form-control input-md" required="">
+					<input name="file" md-button tabindex="1" (change)="onChange($event)" type="file" class="form-control input-md" required="">
 				</div>
 			</div>
 		</fieldset>
@@ -19,6 +18,6 @@
 	<p style="text-align:center;font-weight:bold;color:#00C853" [hidden]="!showProgress">Please Wait ...</p>
 </div>
 <div [hidden]="showProgress" class="modal-footer">
-	<button type="button" class="btn btn-success" (click)="upload()">Upload</button>
-	<button type="button" class="btn btn-secondary" (click)="activeModal.dismiss()">Cancel</button>
+	<button md-button color="primary" (click)="upload()">Upload</button>
+	<button md-button color="warn" md-dialog-close>Cancel</button>
 </div>
